GNOME Bugzilla – Bug 755001
Visual artifact after unmaximize Chromium window
Last modified: 2015-09-23 13:42:17 UTC
Created attachment 311292 [details] Screenshot of the visual artifact after unmaximize Chromium window Steps to reproduce: 1. Open Chromium browser. 2. Maximize the window. 3. Unmaximize the window. 4. See the visual artifact on the right side of the screen. Tested with the current metacity git master.
Created attachment 311660 [details] [review] compositor-xrender: include old shape in damage Please test this patch. It does fix problem at least for me, but I am more interested to know that there is no regressions with this patch.
Yes, it fixes the problem, and I don't see any regressions. Thanks!