compositor-xrender: include old shape in damage

https://bugzilla.gnome.org/show_bug.cgi?id=755001